--- a/public/index.html
+++ b/public/index.html
@@ -170,20 +170,24 @@ a.logo:hover {
   app = angular.module('newshub');
 
   app.controller('PostController', function($scope, $routeParams, $rootScope, postService, alertService) {
-    var getPost;
+    var getPost, sortReplies;
+    sortReplies = function(post) {
+      var id, replies, reply, _ref;
+      replies = [];
+      _ref = post.children;
+      for (id in _ref) {
+        reply = _ref[id];
+        replies.push(reply);
+      }
+      replies = replies.map(sortReplies);
+      post.children = replies.sort(function(a, b) {
+        return (a.vcnt || 0) < (b.vcnt || 0);
+      });
+      return post;
+    };
     getPost = function(done) {
       return postService.getPost($routeParams.id, function(err, data) {
-        var k, replies, v, _ref;
-        replies = [];
-        _ref = data.children;
-        for (k in _ref) {
-          v = _ref[k];
-          replies.push(v);
-        }
-        data.children = replies.sort(function(a, b) {
-          return (a.vcnt || 0) < (b.vcnt || 0);
-        });
-        $scope.post = data;
+        $scope.post = sortReplies(data);
         return callFn(done, err, data);
       });
     };
