--- a/public/index.html
+++ b/public/index.html
@@ -80,9 +80,6 @@ a.logo:hover {
       return alertService.clear();
     });
     user = userService.getUser();
-    if (user) {
-      userService.setUser(user.id, user.name);
-    }
     $rootScope.logout = function() {
       return userService.logout(function(err, date) {
         return alertService.success('Signed out successfully. Redirecting...', 2000, function() {
@@ -327,12 +324,14 @@ a.logo:hover {
     };
     userService.getUser = function() {
       var uid, user;
-      uid = localStorage.getItem('uid');
-      if (uid) {
+      if ($rootScope.user) {
+        user = $rootScope.user;
+      } else if (uid = localStorage.getItem('uid')) {
         user = {
           id: uid,
           name: localStorage.getItem('uname')
         };
+        $rootScope.user = user;
       }
       return user;
     };
